Fix search dark mode

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -14,3 +14,7 @@ body {
 body {
   @apply bg-ayu-50 text-ayu-900 dark:bg-ayu-900 dark:text-ayu-100;
 }
+
+[type="search"]::-webkit-search-cancel-button {
+  display: none;
+}
